--- a/index/temas/tema3/tema3.html
+++ b/index/temas/tema3/tema3.html
@@ -27,6 +27,9 @@
                 DOCUMENTACION
             </summary>
             <ul>
+                <li>
+                    <a href="https://web.dev/articles/video-and-source-tags?hl=es-419" target="_blank">Video y etiquetas source</a>
+                </li>
             </ul>
         </details>
     </div>
@@ -36,7 +39,9 @@
                 PRÁCTICAS
             </summary>
             <ul>
-                <li><a href="./Proyecto_Instituto_Balsamiq (2).pdf" target="_blank">Practica con Balsamiq</a></li>
+                <li>
+                    <a href="./accesibilidad/index.html">Accesibilidad</a>
+                </li>
             </ul>
         </details>
     </div>
@@ -46,6 +51,12 @@
                 HERRAMIENTAS
             </summary>
             <ul>
+                <li>
+                    <a href="https://www.responsivebreakpoints.com/" target="_blank">Pagina de imagenes responsive</a>
+                </li>
+                <li>
+                    <a href="https://pixabay.com/" target="_blank">Pixabay</a>
+                </li>
             </ul>
         </details>
     </div>
